--- a/www/css/style.css
+++ b/www/css/style.css
@@ -160,3 +160,14 @@ img.banner {
   margin-left: 4px;
   margin-top: .3em;
 }
+
+@media screen and (max-width: 560px)  {
+  .calendar-stack .icon {
+    font-size: 2em;
+  }
+  .calendar-stack h4 {
+    font-size: 1.2em;
+    margin-left: 3px;
+    margin-top: .4em;
+  }
+}
