--- a/www/css/style.css
+++ b/www/css/style.css
@@ -171,3 +171,37 @@ img.banner {
     margin-top: .4em;
   }
 }
+
+.visible-xs { display: none; }
+.visible-sm { display: none; }
+.visible-md { display: none; }
+.visible-lg { display: none; }
+
+.hidden-xs { display: inherit; }
+.hidden-sm { display: inherit; }
+.hidden-md { display: inherit; }
+.hidden-lg { display: inherit; }
+
+/* Large desktop */
+@media (min-width: 1200px) {
+  .visible-lg { display: inherit; }
+  .hidden-lg { display: none; }
+}
+
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) {
+  .visible-md { display: inherit; }
+  .hidden-md { display: none; }
+}
+
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) {
+  .visible-sm { display: inherit; }
+  .hidden-sm { display: none; }
+}
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+  .visible-xs { display: inherit; }
+  .hidden-xs { display: none; }
+}
