fix up auto time setting within a destination, and tag it with a type: ['auto', 'propagate']

--- a/www/templates/destinations/edit.modal.html
+++ b/www/templates/destinations/edit.modal.html
@@ -5,7 +5,7 @@
   </div>
   <ion-content class="padding">
   <br><br>
-  <form name="editDestinationForm" ng-submit="trip.$save() && editDestinationModal.hide()">
+  <form name="editDestinationForm" ng-submit="propagateTimings(destinationIdx) && trip.$save() && editDestinationModal.hide()">
     <div class="list">
       <div class="list">
         <a href="{{destination.details.url}}"  target="_blank" class="item item-avatar item-icon-right">
