--- a/www/templates/destinations/edit.modal.html
+++ b/www/templates/destinations/edit.modal.html
@@ -27,6 +27,11 @@
             <span class="input-label">Arrive Time</span>
             <input type="time" placeholder="Arrive Time" name="arriveTime" ng-model="destination.arrive.time" ng-disabled="destination.arrive.disabled">
          </label>
+          <p style="white-space:normal;" ng-show="destination.arrive.disabled">
+            Automatically set based on
+            <span ng-if="destination.arrive.type === 'auto'">Duration &amp; Depart.</span>
+            <span ng-if="destination.arrive.type === 'propagate'">neighboring destination.</span>
+          </p>
         </div>
         <div class="item item-input {{destination.stay.disabled ? 'item-stable disabled' : '' }}" ng-hide="destinationIdx === 0">
           <label>
@@ -41,6 +46,11 @@
             <span class="input-label">&nbsp;</span>
             <input type="number" placeholder="Minutes" name="durationMinutes" ng-model="destination.stay.minutes" ng-disabled="destination.stay.disabled">
           </label>
+          <p style="white-space:normal;" ng-show="destination.stay.disabled">
+            Automatically set based on
+            <span ng-if="destination.stay.type === 'auto'">Arrive &amp; Depart.</span>
+            <span ng-if="destination.stay.type === 'propagate'">neighboring destination(s).</span>
+          </p>
         </div>
         <div class="item item-input {{destination.depart.disabled ? 'item-stable disabled' : '' }}" ng-hide="" >
           <label>
@@ -51,7 +61,11 @@
             <span class="input-label">Depart Time</span>
             <input type="time" placeholder="Depart" ng-model="destination.depart.time" ng-disabled="destination.depart.disabled">
           </label>
-          <p style="white-space:normal;" ng-show="destination.depart.disabled">Automatically set based on Arrive &amp; Duration.</p>
+          <p style="white-space:normal;" ng-show="destination.depart.disabled">
+            Automatically set based on
+            <span ng-if="destination.depart.type === 'auto'">Arrive &amp; Duration.</span>
+            <span ng-if="destination.depart.type === 'propagate'">neighboring destination.</span>
+          </p>
         </div>
         <label class="item item-input item-floating-label">
           <span class="input-label">Notes</span>
