--- a/www/lib/ionicons/less/_ionicons-variables.less
+++ b/www/lib/ionicons/less/_ionicons-variables.less
@@ -1,5 +1,5 @@
 /*!
-Ionicons, v1.5.0
+Ionicons, v1.5.2
 Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
 https://twitter.com/benjsperry  https://twitter.com/ionicframework
 MIT License: https://github.com/driftyco/ionicons
@@ -9,7 +9,7 @@ MIT License: https://github.com/driftyco/ionicons
 
 @ionicons-font-path: "../fonts";
 @ionicons-font-family: "Ionicons";
-@ionicons-version: "1.5.0";
+@ionicons-version: "1.5.2";
 @ionicons-prefix: ion-;
 
 @ionicon-var-alert: "\f101";
@@ -595,7 +595,7 @@ MIT License: https://github.com/driftyco/ionicons
 @ionicon-var-toggle-filled: "\f354";
 @ionicon-var-trash-a: "\f252";
 @ionicon-var-trash-b: "\f253";
-@ionicon-var-trophie: "\f356";
+@ionicon-var-trophy: "\f356";
 @ionicon-var-umbrella: "\f2b7";
 @ionicon-var-university: "\f357";
 @ionicon-var-unlocked: "\f254";
