--- a/www/lib/ionicons/scss/_ionicons-variables.scss
+++ b/www/lib/ionicons/scss/_ionicons-variables.scss
@@ -3,7 +3,7 @@
 
 $ionicons-font-path: "../fonts" !default;
 $ionicons-font-family: "Ionicons" !default;
-$ionicons-version: "1.5.0" !default;
+$ionicons-version: "1.5.2" !default;
 $ionicons-prefix: ion- !default;
 
 $ionicon-var-alert: "\f101";
@@ -589,7 +589,7 @@ $ionicon-var-toggle: "\f355";
 $ionicon-var-toggle-filled: "\f354";
 $ionicon-var-trash-a: "\f252";
 $ionicon-var-trash-b: "\f253";
-$ionicon-var-trophie: "\f356";
+$ionicon-var-trophy: "\f356";
 $ionicon-var-umbrella: "\f2b7";
 $ionicon-var-university: "\f357";
 $ionicon-var-unlocked: "\f254";
