don't show date on repeats

--- a/www/templates/destinations/edit.modal.html
+++ b/www/templates/destinations/edit.modal.html
@@ -16,7 +16,7 @@
         </a>
         <label class="item item-input item-floating-label">
           <span class="input-label">About</span>
-          <input type="text" placeholder="About" ng-model="destination.info">
+          <input type="text" placeholder="About" ng-model="destination.info" autofocus>
         </label>
         <div class="item item-input {{destination.arrive.disabled ? 'item-stable disabled' : '' }}" ng-hide="destinationIdx === 0">
           <label>
